# how-to-pass-art-classes

./: .gitignore  CMakeLists.txt  Makefile  README.md  create_dirs.sh  main
lib/CImg-3.1.3/: README.txt
res/: paintings.csv  paintings.data  phishing.data
res/Cubism/: _Representation
res/Post-Impressionism/: _Representation
src/: CMakeLists.txt  main.cpp  main_adaboost.cpp  main_generate_paintdata.cpp  main_pca_glcm.cpp  main_pca_hog.cpp  main_pca_svm.cpp  main_trees.cpp  multiclass_adaboost.cpp  multiclass_svm.cpp  multiclass_trees.cpp  pca.cpp  pca.h  svm.cpp  svm.h  tools.cpp  tools.h
src/adaboost/: CMakeLists.txt  adaboost.cpp  adaboost.h
src/app/: main.cpp
src/cnn/: Makefile  cnn.cpp  cnn.h  cnn_test.cpp
src/glcm/: CMakeLists.txt  glcm.cpp  glcm.h
src/hog/: CMakeLists.txt  hog.cpp  hog.h
src/images/: CMakeLists.txt  datasetManager.cpp  datasetManager.h  imagesHelper.cpp  imagesHelper.h
src/imagesprogram/: Makefile  datasetManager.cpp  datasetManager.h  imageprep.out  imagesHelper.cpp  imagesHelper.h  main.cpp
src/pca/: CMakeLists.txt  Makefile  pca  pca.cpp  pca.h
src/svm/: CMakeLists.txt  Makefile  svm.cpp  svm.h
src/trees/: CMakeLists.txt  tree.cpp  tree.h  treeNode.h
